# promscale_extension

./: Cargo.toml  Dockerfile  Makefile  build.sh  deb.Dockerfile  docker-entrypoint.sh  promscale.control  test.sh
migration/idempotent/: 001-base.sql
sql/: promscale--0.0.0.sql  promscale-0.3.1.sql
src/: lib.rs  raw.rs  schema.rs  support.rs  util.rs
src/aggregates/: gapfill_delta.rs  mod.rs  prom_delta.rs  prom_increase.rs  prom_rate.rs  vector_selector.rs
src/schema/: estimates.rs  mod.rs  searchpath.rs  support.rs
templates/: idempotent-wrapper.sql
