[package]
name = "promscale"
version = "0.3.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "unwind" # Ensures that we don't abort a Postgres process
opt-level = 3
lto = "fat"
debug = true
codegen-units = 1

[profile.dev]
panic = "unwind"
lto = "thin"

[features]
default = []
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg_test = ["serde_json"]

[dependencies]
arrayvec = "0.7.2"
bincode = "1.3.1"
num_cpus = "1.13.1"
pgx = { path="../pgx/pgx" }
pgx-macros = { path="../pgx/pgx-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.70", optional = true }

[dev-dependencies]
pgx-tests = { path="../pgx/pgx-tests" }
